[ASMT] 0007 - Added basic routing.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,1 @@
-<mat-sidenav-container>
-  <mat-sidenav mode="side" [(opened)]="sidenavOpened">
-    <mat-nav-list>
-      <a mat-list-item>
-        <mat-icon>home</mat-icon>
-        <h4 mat-line>Home</h4>
-      </a>
-      <a mat-list-item>
-        <mat-icon>directions</mat-icon>
-        <h4 mat-line>Router</h4>
-      </a>
-      <a mat-list-item>
-        <mat-icon>track_changes</mat-icon>
-        <h4 mat-line>Change Detection</h4>
-      </a>
-      <a mat-list-item>
-        <mat-icon>update</mat-icon>
-        <h4 mat-line>Zone</h4>
-      </a>
-      <a mat-list-item>
-        <mat-icon>replay_circle</mat-icon>
-        <h4 mat-line>Lifecycle Hooks</h4>
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <button mat-icon-button (click)="sidenavOpened = !sidenavOpened"><mat-icon>menu</mat-icon></button>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<app-layout></app-layout>
